# tools-ic-testing

./: .example.env  pyproject.toml  readme  test.py
app/tools/: serpapi.py
app/utils/: package.py
config/: settings.py
core/tools/: __init__.py  category.py  toolkit.py
test/: serp_test.py  test.py
