[tool.poetry]
name = "fastapi-tools-ic"
version = "0.1.0"
description = ""
authors = ["Gaurav R <gaurav.r@innovalabs.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.32.0"
docstring-parser = "^0.16"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
google-search-results = "^2.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
